// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReplyMessageChannel component existing ticket with last message as chat message 1`] = `
<div
  className="component"
>
  <div
    className="mt-1 mr-2"
  >
    <UncontrolledDropdown>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        className="dropdownToggle"
        color=""
        type="button"
      >
        <SourceIcon
          className="md-2"
          type="chat"
        />
      </DropdownToggle>
      <DropdownMenu
        flip={true}
        tag="div"
      >
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email"
          />
          Reply via email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email-forward"
          />
          Forward by email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="chat"
          />
          Reply via chat
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="internal-note"
          />
          Leave an internal note
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledDropdown>
  </div>
  <div
    className="sourceLabel mt-1"
  >
    Internal note
  </div>
  <KeyboardShortcuts
    keymap={
      Object {
        "FORWARD_REPLY": Object {
          "action": [Function],
          "key": "f",
        },
        "INTERNAL_NOTE_REPLY": Object {
          "action": [Function],
          "key": "i",
        },
      }
    }
    name="TicketDetailContainer"
  />
</div>
`;

exports[`ReplyMessageChannel component existing ticket with message of type chat 1`] = `
<div
  className="component"
>
  <div
    className="mt-1 mr-2"
  >
    <UncontrolledDropdown>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        className="dropdownToggle"
        color=""
        type="button"
      >
        <SourceIcon
          className="md-2"
          type="chat"
        />
      </DropdownToggle>
      <DropdownMenu
        flip={true}
        tag="div"
      >
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email"
          />
          Reply via email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email-forward"
          />
          Forward by email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="chat"
          />
          Reply via chat
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="internal-note"
          />
          Leave an internal note
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledDropdown>
  </div>
  <div
    className="sourceLabel mt-1"
  >
    Internal note
  </div>
  <KeyboardShortcuts
    keymap={
      Object {
        "FORWARD_REPLY": Object {
          "action": [Function],
          "key": "f",
        },
        "INTERNAL_NOTE_REPLY": Object {
          "action": [Function],
          "key": "i",
        },
      }
    }
    name="TicketDetailContainer"
  />
</div>
`;

exports[`ReplyMessageChannel component existing ticket with message of type email 1`] = `
<div
  className="component"
>
  <div
    className="mt-1 mr-2"
  >
    <UncontrolledDropdown>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        className="dropdownToggle"
        color=""
        type="button"
      >
        <SourceIcon
          className="md-2"
          type="email"
        />
      </DropdownToggle>
      <DropdownMenu
        flip={true}
        tag="div"
      >
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email"
          />
          Reply via email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email-forward"
          />
          Forward by email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="internal-note"
          />
          Leave an internal note
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledDropdown>
  </div>
  <div
    className="sourceLabel mt-1"
  >
    Internal note
  </div>
  <KeyboardShortcuts
    keymap={
      Object {
        "FORWARD_REPLY": Object {
          "action": [Function],
          "key": "f",
        },
        "INTERNAL_NOTE_REPLY": Object {
          "action": [Function],
          "key": "i",
        },
      }
    }
    name="TicketDetailContainer"
  />
</div>
`;

exports[`ReplyMessageChannel component existing ticket with message of type facebook-comment 1`] = `
<div
  className="component"
>
  <div
    className="mt-1 mr-2"
  >
    <UncontrolledDropdown>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        className="dropdownToggle"
        color=""
        type="button"
      >
        <SourceIcon
          className="md-2"
          type="facebook-comment"
        />
      </DropdownToggle>
      <DropdownMenu
        flip={true}
        tag="div"
      >
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email"
          />
          Reply via email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email-forward"
          />
          Forward by email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="facebook-comment"
          />
          Reply via Facebook comment
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="internal-note"
          />
          Leave an internal note
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledDropdown>
  </div>
  <div
    className="sourceLabel mt-1"
  >
    Internal note
  </div>
  <KeyboardShortcuts
    keymap={
      Object {
        "FORWARD_REPLY": Object {
          "action": [Function],
          "key": "f",
        },
        "INTERNAL_NOTE_REPLY": Object {
          "action": [Function],
          "key": "i",
        },
      }
    }
    name="TicketDetailContainer"
  />
</div>
`;

exports[`ReplyMessageChannel component existing ticket with message of type facebook-mention-comment 1`] = `
<div
  className="component"
>
  <div
    className="mt-1 mr-2"
  >
    <UncontrolledDropdown>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        className="dropdownToggle"
        color=""
        type="button"
      >
        <SourceIcon
          className="md-2"
          type="facebook-mention-comment"
        />
      </DropdownToggle>
      <DropdownMenu
        flip={true}
        tag="div"
      >
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email"
          />
          Reply via email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email-forward"
          />
          Forward by email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="facebook-mention-comment"
          />
          Reply via Facebook mention comment
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="internal-note"
          />
          Leave an internal note
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledDropdown>
  </div>
  <div
    className="sourceLabel mt-1"
  >
    Internal note
  </div>
  <KeyboardShortcuts
    keymap={
      Object {
        "FORWARD_REPLY": Object {
          "action": [Function],
          "key": "f",
        },
        "INTERNAL_NOTE_REPLY": Object {
          "action": [Function],
          "key": "i",
        },
      }
    }
    name="TicketDetailContainer"
  />
</div>
`;

exports[`ReplyMessageChannel component existing ticket with message of type facebook-mention-post 1`] = `
<div
  className="component"
>
  <div
    className="mt-1 mr-2"
  >
    <UncontrolledDropdown>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        className="dropdownToggle"
        color=""
        type="button"
      >
        <SourceIcon
          className="md-2"
          type="facebook-mention-comment"
        />
      </DropdownToggle>
      <DropdownMenu
        flip={true}
        tag="div"
      >
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email"
          />
          Reply via email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email-forward"
          />
          Forward by email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="facebook-mention-comment"
          />
          Reply via Facebook mention comment
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="internal-note"
          />
          Leave an internal note
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledDropdown>
  </div>
  <div
    className="sourceLabel mt-1"
  >
    Internal note
  </div>
  <KeyboardShortcuts
    keymap={
      Object {
        "FORWARD_REPLY": Object {
          "action": [Function],
          "key": "f",
        },
        "INTERNAL_NOTE_REPLY": Object {
          "action": [Function],
          "key": "i",
        },
      }
    }
    name="TicketDetailContainer"
  />
</div>
`;

exports[`ReplyMessageChannel component existing ticket with message of type facebook-messenger 1`] = `
<div
  className="component"
>
  <div
    className="mt-1 mr-2"
  >
    <UncontrolledDropdown>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        className="dropdownToggle"
        color=""
        type="button"
      >
        <SourceIcon
          className="md-2"
          type="facebook-messenger"
        />
      </DropdownToggle>
      <DropdownMenu
        flip={true}
        tag="div"
      >
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email"
          />
          Reply via email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email-forward"
          />
          Forward by email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="facebook-messenger"
          />
          Reply via Messenger
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="internal-note"
          />
          Leave an internal note
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledDropdown>
  </div>
  <div
    className="sourceLabel mt-1"
  >
    Internal note
  </div>
  <KeyboardShortcuts
    keymap={
      Object {
        "FORWARD_REPLY": Object {
          "action": [Function],
          "key": "f",
        },
        "INTERNAL_NOTE_REPLY": Object {
          "action": [Function],
          "key": "i",
        },
      }
    }
    name="TicketDetailContainer"
  />
</div>
`;

exports[`ReplyMessageChannel component existing ticket with message of type facebook-post 1`] = `
<div
  className="component"
>
  <div
    className="mt-1 mr-2"
  >
    <UncontrolledDropdown>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        className="dropdownToggle"
        color=""
        type="button"
      >
        <SourceIcon
          className="md-2"
          type="facebook-comment"
        />
      </DropdownToggle>
      <DropdownMenu
        flip={true}
        tag="div"
      >
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email"
          />
          Reply via email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email-forward"
          />
          Forward by email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="facebook-comment"
          />
          Reply via Facebook comment
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="internal-note"
          />
          Leave an internal note
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledDropdown>
  </div>
  <div
    className="sourceLabel mt-1"
  >
    Internal note
  </div>
  <KeyboardShortcuts
    keymap={
      Object {
        "FORWARD_REPLY": Object {
          "action": [Function],
          "key": "f",
        },
        "INTERNAL_NOTE_REPLY": Object {
          "action": [Function],
          "key": "i",
        },
      }
    }
    name="TicketDetailContainer"
  />
</div>
`;

exports[`ReplyMessageChannel component existing ticket with message of type instagram-ad-comment 1`] = `
<div
  className="component"
>
  <div
    className="mt-1 mr-2"
  >
    <UncontrolledDropdown>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        className="dropdownToggle"
        color=""
        type="button"
      >
        <SourceIcon
          className="md-2"
          type="instagram-ad-comment"
        />
      </DropdownToggle>
      <DropdownMenu
        flip={true}
        tag="div"
      >
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email"
          />
          Reply via email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email-forward"
          />
          Forward by email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="instagram-ad-comment"
          />
          Reply via Instagram
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="internal-note"
          />
          Leave an internal note
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledDropdown>
  </div>
  <div
    className="sourceLabel mt-1"
  >
    Internal note
  </div>
  <KeyboardShortcuts
    keymap={
      Object {
        "FORWARD_REPLY": Object {
          "action": [Function],
          "key": "f",
        },
        "INTERNAL_NOTE_REPLY": Object {
          "action": [Function],
          "key": "i",
        },
      }
    }
    name="TicketDetailContainer"
  />
</div>
`;

exports[`ReplyMessageChannel component existing ticket with message of type instagram-ad-media 1`] = `
<div
  className="component"
>
  <div
    className="mt-1 mr-2"
  >
    <UncontrolledDropdown>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        className="dropdownToggle"
        color=""
        type="button"
      >
        <SourceIcon
          className="md-2"
          type="instagram-ad-comment"
        />
      </DropdownToggle>
      <DropdownMenu
        flip={true}
        tag="div"
      >
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email"
          />
          Reply via email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email-forward"
          />
          Forward by email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="instagram-ad-comment"
          />
          Reply via Instagram
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="internal-note"
          />
          Leave an internal note
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledDropdown>
  </div>
  <div
    className="sourceLabel mt-1"
  >
    Internal note
  </div>
  <KeyboardShortcuts
    keymap={
      Object {
        "FORWARD_REPLY": Object {
          "action": [Function],
          "key": "f",
        },
        "INTERNAL_NOTE_REPLY": Object {
          "action": [Function],
          "key": "i",
        },
      }
    }
    name="TicketDetailContainer"
  />
</div>
`;

exports[`ReplyMessageChannel component existing ticket with message of type instagram-comment 1`] = `
<div
  className="component"
>
  <div
    className="mt-1 mr-2"
  >
    <UncontrolledDropdown>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        className="dropdownToggle"
        color=""
        type="button"
      >
        <SourceIcon
          className="md-2"
          type="instagram-comment"
        />
      </DropdownToggle>
      <DropdownMenu
        flip={true}
        tag="div"
      >
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email"
          />
          Reply via email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email-forward"
          />
          Forward by email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="instagram-comment"
          />
          Reply via Instagram
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="internal-note"
          />
          Leave an internal note
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledDropdown>
  </div>
  <div
    className="sourceLabel mt-1"
  >
    Internal note
  </div>
  <KeyboardShortcuts
    keymap={
      Object {
        "FORWARD_REPLY": Object {
          "action": [Function],
          "key": "f",
        },
        "INTERNAL_NOTE_REPLY": Object {
          "action": [Function],
          "key": "i",
        },
      }
    }
    name="TicketDetailContainer"
  />
</div>
`;

exports[`ReplyMessageChannel component existing ticket with message of type instagram-media 1`] = `
<div
  className="component"
>
  <div
    className="mt-1 mr-2"
  >
    <UncontrolledDropdown>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        className="dropdownToggle"
        color=""
        type="button"
      >
        <SourceIcon
          className="md-2"
          type="instagram-comment"
        />
      </DropdownToggle>
      <DropdownMenu
        flip={true}
        tag="div"
      >
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email"
          />
          Reply via email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email-forward"
          />
          Forward by email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="instagram-comment"
          />
          Reply via Instagram
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="internal-note"
          />
          Leave an internal note
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledDropdown>
  </div>
  <div
    className="sourceLabel mt-1"
  >
    Internal note
  </div>
  <KeyboardShortcuts
    keymap={
      Object {
        "FORWARD_REPLY": Object {
          "action": [Function],
          "key": "f",
        },
        "INTERNAL_NOTE_REPLY": Object {
          "action": [Function],
          "key": "i",
        },
      }
    }
    name="TicketDetailContainer"
  />
</div>
`;

exports[`ReplyMessageChannel component existing ticket with message of type twitter-tweet 1`] = `
<div
  className="component"
>
  <div
    className="mt-1 mr-2"
  >
    <UncontrolledDropdown>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        className="dropdownToggle"
        color=""
        type="button"
      >
        <SourceIcon
          className="md-2"
          type="twitter-tweet"
        />
      </DropdownToggle>
      <DropdownMenu
        flip={true}
        tag="div"
      >
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email"
          />
          Reply via email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email-forward"
          />
          Forward by email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="twitter-tweet"
          />
          Reply via Twitter tweet
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="internal-note"
          />
          Leave an internal note
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledDropdown>
  </div>
  <div
    className="sourceLabel mt-1"
  >
    Internal note
  </div>
  <KeyboardShortcuts
    keymap={
      Object {
        "FORWARD_REPLY": Object {
          "action": [Function],
          "key": "f",
        },
        "INTERNAL_NOTE_REPLY": Object {
          "action": [Function],
          "key": "i",
        },
      }
    }
    name="TicketDetailContainer"
  />
</div>
`;

exports[`ReplyMessageChannel component existing ticket with message of type yotpo-review 1`] = `
<div
  className="component"
>
  <div
    className="mt-1 mr-2"
  >
    <UncontrolledDropdown>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        className="dropdownToggle"
        color=""
        type="button"
      >
        <SourceIcon
          className="md-2"
          type="yotpo-review"
        />
      </DropdownToggle>
      <DropdownMenu
        flip={true}
        tag="div"
      >
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email"
          />
          Reply via email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email-forward"
          />
          Forward by email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="yotpo-review-public-comment"
          />
          Public reply on Yotpo review
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="yotpo-review-private-comment"
          />
          Private reply on Yotpo review
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="internal-note"
          />
          Leave an internal note
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledDropdown>
  </div>
  <div
    className="sourceLabel mt-1"
  >
    Internal note
  </div>
  <KeyboardShortcuts
    keymap={
      Object {
        "FORWARD_REPLY": Object {
          "action": [Function],
          "key": "f",
        },
        "INTERNAL_NOTE_REPLY": Object {
          "action": [Function],
          "key": "i",
        },
      }
    }
    name="TicketDetailContainer"
  />
</div>
`;

exports[`ReplyMessageChannel component existing ticket without messages 1`] = `
<div
  className="component"
>
  <div
    className="mt-1 mr-2"
  >
    <UncontrolledDropdown>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        className="dropdownToggle"
        color=""
        type="button"
      >
        <SourceIcon
          className="md-2"
          type="email"
        />
      </DropdownToggle>
      <DropdownMenu
        flip={true}
        tag="div"
      >
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email-forward"
          />
          Forward by email
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledDropdown>
  </div>
  <div
    className="sourceLabel mt-1"
  >
    Internal note
  </div>
  <KeyboardShortcuts
    keymap={
      Object {
        "FORWARD_REPLY": Object {
          "action": [Function],
          "key": "f",
        },
        "INTERNAL_NOTE_REPLY": Object {
          "action": [Function],
          "key": "i",
        },
      }
    }
    name="TicketDetailContainer"
  />
</div>
`;

exports[`ReplyMessageChannel component new ticket 1`] = `
<div
  className="component"
>
  <div
    className="mt-1 mr-2"
  >
    <UncontrolledDropdown>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        className="dropdownToggle"
        color=""
        type="button"
      >
        <SourceIcon
          className="md-2"
          type="email"
        />
      </DropdownToggle>
      <DropdownMenu
        flip={true}
        tag="div"
      >
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email"
          />
          Reply via email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="internal-note"
          />
          Leave an internal note
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledDropdown>
  </div>
  <ForwardRef(MessageSourceFields)
    canOpen={true}
    isOpenDefault={false}
  />
  <KeyboardShortcuts
    keymap={
      Object {
        "FORWARD_REPLY": Object {
          "action": [Function],
          "key": "f",
        },
        "INTERNAL_NOTE_REPLY": Object {
          "action": [Function],
          "key": "i",
        },
      }
    }
    name="TicketDetailContainer"
  />
</div>
`;

exports[`ReplyMessageChannel component should render option "Make outbound call" for existing phone ticket 1`] = `
<div
  className="component"
>
  <div
    className="mt-1 mr-2"
  >
    <UncontrolledDropdown>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        className="dropdownToggle"
        color=""
        type="button"
      >
        <SourceIcon
          className="md-2"
          type="email"
        />
      </DropdownToggle>
      <DropdownMenu
        flip={true}
        tag="div"
      >
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email-forward"
          />
          Forward by email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="phone"
          />
          Make outbound call
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledDropdown>
  </div>
  <div
    className="sourceLabel mt-1"
  >
    Internal note
  </div>
  <KeyboardShortcuts
    keymap={
      Object {
        "FORWARD_REPLY": Object {
          "action": [Function],
          "key": "f",
        },
        "INTERNAL_NOTE_REPLY": Object {
          "action": [Function],
          "key": "i",
        },
      }
    }
    name="TicketDetailContainer"
  />
</div>
`;
